--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -10,6 +10,9 @@
     <form action="/search" method="GET">
       <input type="text" id="query" name="query">
       <input type="submit" value="search">
-    </form> 
+    </form><br><br>
+    <form action="/show_upload_page" method="GET">
+      <input type="submit" value="I want to upload my custom file">
+    </form>
   </body>
 </html>
