modified:   templates/upload.html

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Upload CSV File</title>
+    <title>Upload Text File</title>
     </head>
     <body>
-    <h1 style=color:red>Please upload your custom CSV File</h1>
+    <h1 style=color:red>Please upload your custom text File</h1>
     <form action="/upload" method="POST" enctype="multipart/form-data">
-        <input type="file" name="csvfile" id="csvfile">
+        <input type="file" name="txtfile" id="txtfile">
         <input type="submit" value="Upload File">
     </form>
     </body>
