modified:   templates/upload.html

--- a/templates/error_in_upload.html
+++ b/templates/error_in_upload.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Search</title>
+    <title>Error in Upload</title>
     <link rel="stylesheet" href="/static/css/style.css">
   </head>
   <body>
     <img style=margin-top:150px; id="logo" src="/static/images/logo2.png" alt="My Logo">
-
-    <form action="/search" method="GET">
-      <input type="text" id="query" name="query">
-      <input type="submit" value="search">
-    </form><br><br>
+    
     <form action="/show_upload_page" method="GET">
-      <input type="submit" value="I want to upload my custom text file">
+      <input type="submit" value="Go Back to Home">
     </form>
   </body>
 </html>
