--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="/static/css/style.css">
   </head>
   <body>
-    <img id="logo" src="/static/images/logo.png" alt="My Logo">
+    <img id="logo" src="/static/images/logo2.png" alt="My Logo">
 
     <form action="/search" method="GET">
       <input type="text" id="query" name="query" value="{{ query }}">
       <input type="submit" value="search">
     </form> 
     <form action="/show_upload_page" method="GET">
-      <input type="submit" value="I want to upload my custom file">
+      <input type="submit" value="I want to upload my custom text file">
     </form>
     <div id="results">
     <h1>Search Results</h1>
