--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body { background: #141414; color: white; font-family: arial; text-align: center; }
-#logo { padding: 20px; width: 300px; }
+#logo { padding: 20px; width: 600px; height: 300px;}
 input { font-size: 20px; padding: 5px;     border-radius: 5px;
 }
 input[type=submit] { 
