--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -3,10 +3,53 @@
   <head>
     <title>Search</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <style>
+      .dropbtn {
+        background-color: #04AA6D;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+      }
+      
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+      
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        right: 0;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+      
+      .dropdown-content a:hover {background-color: #f1f1f1;}
+      .dropdown:hover .dropdown-content {display: block;}
+      .dropdown:hover .dropbtn {background-color: #3e8e41;}
+      </style>
   </head>
   <body>
     <img style=margin-top:150px; id="logo" src="/static/images/logo2.png" alt="My Logo">
-
+    <div class="dropdown" style="float:right;">
+      <button class="dropbtn">Choose Corpus</button>
+      <div class="dropdown-content">
+        {% for index in available_indexes %}
+          <input type="submit" name="selected_index_name" value="{{ index }}"></input>
+        {% endfor %}
+      </div>
+    </div>
     <form action="/search" method="GET">
       <input type="text" id="query" name="query">
       <input type="submit" value="search">
