--- a/templates/upload.html
+++ b/templates/upload.html
@@ -11,6 +11,7 @@
         <input type="file" name="txtfile" id="txtfile">
         <input type="submit" value="Upload File">
     </form>
+    <h2 style=color:red;>File upload and Index Creation will take a few minutes. Do not refresh this page</h2>
     </body>
 </html>
     
