--- a/templates/upserted_in_index.html
+++ b/templates/upserted_in_index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <img id="logo" src="/static/images/logo2.png" alt="My Logo">
-    <h1>Document processed successfully</h1>
-    <h2>New index created</h2>
-    <h3>Document upserted</h3>
+    <h1 style=color:green;>Document processed successfully!</h1>
+    <h1 style=color:green;>New index created!</h1>
+    <h1 style=color:green;>Document upserted in database!</h1>
     <form action="/" method="GET">
       <input type="submit" value="Go to Search Page">
     </form>
