modified:   templates/upload.html

--- a/templates/no_file_selected.html
+++ b/templates/no_file_selected.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="/static/css/style.css">
   </head>
   <body>
-    <img style=margin-top:150px; id="logo" src="/static/images/error.png" alt="My Error">
-    <h1>No File Selected</h1>
+    <img style=margin-top:100px;margin-left:50px id="logo" src="/static/images/error.png" alt="My Error">
+    <h1 style="color:red">No File Selected</h1>
     <form action="/show_upload_page" method="GET">
-      <input type="submit" value="Go Back to Upload Page">
+      <input style="margin-left:53px;" type="submit" value=" Go Back to Upload Page ">
     </form>
   </body>
 </html>
