--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -10,7 +10,7 @@
     <form action="/search" method="GET">
       <input type="text" id="query" name="query" value="{{ query }}">
       <input type="submit" value="search">
-    </form> 
+    </form><br>
     <form action="/show_upload_page" method="GET">
       <input type="submit" value="I want to upload my custom text file">
     </form>
