--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
-    <img id="logo" src="/static/images/logo2.png" alt="My Logo">
-    <h1 style=color:green;margin-top:50px;>Please upload your custom text file</h1>
+    <img style="margin-left:50px;" id="logo" src="/static/images/logo2.png" alt="My Logo">
+    <h1 style=color:green;margin-top:50px;>Please upload your custom text file</h1><br>
     <form action="/upload" method="POST" enctype="multipart/form-data">
         <input type="file" name="txtfile" id="txtfile">
         <input type="submit" value="Upload File">
-    </form>
-    <h2 style=color:red;>File upload and Index Creation will take a few minutes. Do not refresh this page</h2>
+    </form><br><br>
+    <h2 style=color:red;margin-left:100px>File upload and Index Creation will take a few minutes. Do not refresh this page</h2>
     </body>
 </html>
     
