--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,12 @@ input[type=submit] {
     border: solid white 1px; 
 }
 
+.button { 
+    background: black; 
+    color: white; 
+    border: solid white 1px; 
+}
+
 #results {
     text-align: left;
     width: 800px;
