--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,12 +6,14 @@
     </head>
     <body>
     <img style="margin-left:50px;" id="logo" src="/static/images/logo2.png" alt="My Logo">
-    <h1 style=color:green;margin-top:50px;>Please upload your custom text file</h1><br>
+    <h1 style=color:green;margin-top:5px;>Please upload your custom text file</h1><br>
     <form action="/upload" method="POST" enctype="multipart/form-data">
         <input type="file" name="txtfile" id="txtfile">
-        <input type="submit" value="Upload File">
-    </form><br><br>
-    <h2 style=color:red;margin-left:100px>File upload and Index Creation will take a few minutes. Do not refresh this page</h2>
+        <input type="submit" value=" Upload File ">
+    </form><br>
+    <form action="/google_picker" method="GET">
+        <input type="submit" value=" I want to upload from my Google Drive ">
+    </form><br>
+    <h3 style=color:red;margin-left:100px>File upload and Index Creation will take a few minutes. Do not refresh this page</h3>
     </body>
 </html>
-    
